# micro-decoder

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml
.github/workflows/: ci.yml  publish.yml  release-drafter.yml
cmake/: esp-idf.cmake  host.cmake  sources.cmake
docs/: INTEGRATION.md
examples/decode_benchmark/: README.md  convert_audio.py  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
examples/decode_benchmark/src/: CMakeLists.txt  main.cpp  test_audio_mp3.h  test_audio_opus.h
host_examples/basic_player/: CMakeLists.txt  main.cpp
host_examples/common/: portaudio_sink.cpp  portaudio_sink.h
include/micro_decoder/: decoder_source.h  types.h
script/: clang-tidy.sh
src/: audio_decoder.cpp  audio_decoder.h  audio_reader.cpp  audio_reader.h  decoder_source.cpp  md_transfer_buffer.cpp  md_transfer_buffer.h  ring_buffer.cpp  ring_buffer.h  types.cpp
src/esp/: http_client.cpp
src/host/: http_client.cpp
src/platform/: event_flags.h  http_client.h  logging.h  memory.h  spsc_ring_buffer.h  thread.h
